--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dasiot-react",
+  "name": "dasiot-react-component-lib",
   "version": "0.1.0",
   "private": true,
   "main": "src/index.ts",
@@ -9,7 +9,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git@github.com:BeeInventor/dasiot-react-component-lib.git"
   },
   "scripts": {
     "storybook": "start-storybook -p 6006 -s public",
