chore: for test

--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "dasiot-react-component-lib",
   "version": "0.1.0",
   "private": true,
-  "main": "src/index.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
   "files": [
-    "dist",
+    "lib",
     "README.md"
   ],
   "repository": {
@@ -12,12 +14,12 @@
     "url": "git@github.com:BeeInventor/dasiot-react-component-lib.git"
   },
   "scripts": {
-    "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public",
-    "format": "prettier --write \"package/**/*.ts\"",
-    "lint": "eslint \"package/**/*.ts\" --fix",
-    "clean": "rimraf dist",
-    "install-peers": "install-peers"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook -o docs",
+    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
+    "clean": "rimraf lib",
+    "build": "yarn clean && rollup -c"
   },
   "eslintConfig": {
     "extends": [
@@ -54,18 +56,22 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "typescript": "^4.1.2"
+    "@types/react-dom": "^17.0.0"
   },
   "peerDependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/types": "^5.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/types": "^5.1.0",
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
@@ -74,13 +80,19 @@
     "@storybook/react": "^6.3.8",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
-    "install-peers-cli": "^2.2.0",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.56.3",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "typescript": "^4.1.2"
   },
   "lint-staged": {
     "src/**/*.ts": [
