--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dasiot-react-component-lib",
+  "name": "@beeinventor/dasiot-react-component-lib",
   "version": "0.1.0",
   "private": true,
   "main": "lib/index.js",
@@ -75,8 +75,6 @@
     "@storybook/addon-actions": "^6.3.8",
     "@storybook/addon-essentials": "^6.3.8",
     "@storybook/addon-links": "^6.3.8",
-    "@storybook/node-logger": "^6.3.8",
-    "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.3.8",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -103,5 +101,8 @@
       "npm run lint",
       "npm run format"
     ]
+  },
+  "publishConfig": {
+    "@beeinventor:registry": "https://npm.pkg.github.com"
   }
 }
