--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
+          scope: '@beeinventor'
       - run: npm ci
       - run: npm publish
         env:
