--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -14,7 +14,6 @@ jobs:
           node-version: 14
       - run: npm ci
       - run: npm test
-      - run: npm build
 
   publish-gpr:
     needs: build
@@ -30,6 +29,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@beeinventor'
       - run: npm ci
+      - run: npm run build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
