--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "babel-loader": "^8.2.2",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
@@ -92,13 +92,9 @@
     "typescript": "^4.1.2"
   },
   "lint-staged": {
-    "src/**/*.ts": [
-      "npm run lint",
-      "npm run format"
-    ],
-    "src/**/*.tsx": [
-      "npm run lint",
-      "npm run format"
+    "src/**/*.(ts|tsx)": [
+      "eslint --fix",
+      "prettier --write"
     ]
   },
   "publishConfig": {
