--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "es5",
     "outDir": "lib",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "declaration": true,
     "declarationDir": "lib",
     "allowJs": true,
@@ -22,12 +18,6 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-      "node_modules",
-      "lib",
-      "**/*.stories.tsx",
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "lib", "**/*.stories.tsx"]
 }
