--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,25 @@
 {
   "compilerOptions": {
-    "target": "es5",
     "module": "esnext",
-    "jsx": "react",
+    "target": "es5",
+    "lib": ["es6", "dom"],
     "sourceMap": true,
-    "outDir": "dist",
-    "strict": true,
+    "jsx": "react",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
+    "rootDir": "src",
     "declaration": true,
-    "declarationDir": "types",
-    "emitDeclarationOnly": true
+    "declarationDir": "lib",
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "esModuleInterop": true,
+    "emitDeclarationOnly": false,
+    "baseUrl": "src/",
+    "paths": {
+      "components": ["src/components/*"]
+    }
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "lib", "**/*.stories.tsx"]
+  "exclude": ["node_modules", "lib", "**/*.stories.tsx"],
+  "types": ["typePatches"]
 }
