--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beeinventor/dasiot-react-component-lib",
-  "version": "0.2.2",
+  "version": "1.0.0",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -38,7 +38,12 @@
   },
   "peerDependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
