--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@beeinventor/dasiot-react-component-lib",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
     "lib",
+    "src",
     "README.md"
   ],
   "repository": {
