--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,8 +12,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - run: npm ci
-      - run: npm test
+      - run: install --frozen-lockfile
+      - run: yarn run test
 
   publish-gpr:
     needs: build
@@ -28,8 +28,8 @@ jobs:
           node-version: 14
           registry-url: https://npm.pkg.github.com/
           scope: '@beeinventor'
-      - run: npm ci
-      - run: npm run build
+      - run: install --frozen-lockfile
+      - run: yarn build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
