--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 14
-      - run: install --frozen-lockfile
+      - run: yarn install --frozen-lockfile
       - run: yarn run test
 
   publish-gpr:
