--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
           scope: '@beeinventor'
-      - run: install --frozen-lockfile
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - run: npm publish
         env:
