fix: recover tsconfig setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,11 @@
     "esModuleInterop": true,
     "emitDeclarationOnly": false,
     "baseUrl": "src/",
+    "paths": {
+      "components": ["src/components/*"]
+    }
   },
   "include": ["src/**/*.tsx", "src/**/*.ts"],
   "exclude": ["lib", "node_modules"],
+  "types": ["typePatches"]
 }
