chore: files migrate to storybook 7

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "src/",
     "paths": {
       "components": ["src/components/*"]
-    }
+    },
+    "preserveSymlinks": true
   },
   "include": ["src/**/*.tsx", "src/**/*.ts"],
   "exclude": ["lib", "node_modules"],
