--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beeinventor/dasiot-react-component-lib",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "module": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -17,8 +17,7 @@
     "build-storybook": "storybook build -o docs",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\"",
     "lint": "eslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
-    "clean": "rimraf lib",
-    "build": "npm run clean && rollup -c"
+    "build": "rollup -c"
   },
   "browserslist": {
     "production": [
@@ -43,8 +42,8 @@
     "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -83,14 +82,15 @@
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
     "prettier": "^2.3.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "rollup": "^2.56.3",
     "rollup-plugin-dts": "^4.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "storybook": "^7.0.24",
+    "tslib": "^2.6.0",
     "typescript": "^4.9.5",
     "vite": "^4.3.9"
   },
