--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@beeinventor/dasiot-react-component-lib",
-  "version": "1.8.4",
+  "version": "1.9.0",
   "type": "module",
   "files": [
     "lib",
@@ -31,17 +31,14 @@
     ]
   },
   "dependencies": {
-    "@rollup/plugin-terser": "^0.4.4",
     "classnames": "^2.5.1",
-    "date-fns": "^2.30.0",
-    "upgrade": "^1.1.0"
+    "date-fns": "^4.1.0"
   },
   "peerDependencies": {
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@mui/icons-material": "^5.0.3",
-    "@mui/material": "^5.0.3",
-    "@mui/styles": "^5.0.1",
+    "@emotion/react": "^11.0.0",
+    "@emotion/styled": "^11.0.0",
+    "@mui/icons-material": "^6.0.0",
+    "@mui/material": "^6.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -54,11 +51,11 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@eslint/js": "^9.13.0",
-    "@mui/icons-material": "^5.16.7",
-    "@mui/material": "^5.16.7",
-    "@mui/styles": "^5.16.7",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
     "@rollup/plugin-url": "^8.0.2",
     "@storybook/addon-actions": "^8.3.6",
@@ -94,7 +91,7 @@
     "tslib": "^2.8.0",
     "typescript": "^5.6.3",
     "typescript-eslint": "^8.12.1",
-    "vite": "^4.5.5"
+    "vite": "^5.4.10"
   },
   "publishConfig": {
     "@beeinventor:registry": "https://npm.pkg.github.com"
