--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -11,8 +11,10 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-      - run: yarn install --frozen-lockfile
+          node-version: 20
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
 
   publish-gpr:
     needs: build
@@ -24,11 +26,13 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
           registry-url: https://npm.pkg.github.com/
           scope: '@beeinventor'
-      - run: yarn install --frozen-lockfile
-      - run: yarn build
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - run: pnpm build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
