--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,6 +15,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 9
+      - run: pnpm i
+      - run: pnpm build
 
   publish-gpr:
     needs: build
@@ -29,10 +31,6 @@ jobs:
           node-version: 20
           registry-url: https://npm.pkg.github.com/
           scope: '@beeinventor'
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - run: pnpm build
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
