--- a/.github/workflows/build-storybook-demo.yml
+++ b/.github/workflows/build-storybook-demo.yml
@@ -33,5 +33,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           branch: gh-pages
-          folder: storybook-static
+          folder: docs
           clean: true
