--- a/.github/workflows/build-storybook-demo.yml
+++ b/.github/workflows/build-storybook-demo.yml
@@ -18,6 +18,9 @@ jobs:
           node-version: 24
           cache: 'pnpm'
 
+      - name: Disable Corepack
+        run: corepack disable
+
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
