--- a/.github/workflows/build-storybook-demo.yml
+++ b/.github/workflows/build-storybook-demo.yml
@@ -9,22 +9,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 24
-          cache: 'pnpm'
-
-      # Install pnpm manually & force-add to PATH
-      - name: Install pnpm
-        run: |
-          npm install -g pnpm@9
-          echo "$(npm root -g)/pnpm/bin" >> $GITHUB_PATH
-
-      - name: Install and Build Storybook
+          node-version: '20'
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 9
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         run: |
           pnpm install --frozen-lockfile
           pnpm run build-storybook
@@ -32,6 +24,5 @@ jobs:
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages
-          folder: docs
-          clean: true
+          branch: gh-pages # The branch the action should deploy to.
+          folder: docs # The folder the action should deploy.
