--- a/.github/workflows/build-storybook-demo.yml
+++ b/.github/workflows/build-storybook-demo.yml
@@ -8,21 +8,36 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      # Step 1 — Install Node 24 (Corepack enabled by default)
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: '20'
-      - uses: pnpm/action-setup@v4
-        with:
-          version: 9
-      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+          node-version: 24
+          cache: 'pnpm'
+
+      # Step 2 — Disable Corepack (MUST DO on Node 24)
+      - name: Disable Corepack
+        run: corepack disable
+
+      # Step 3 — Install pnpm manually (latest version)
+      - name: Install pnpm
+        run: npm install -g pnpm@latest
+
+      # Step 4 — Build Storybook
+      - name: Install and Build Storybook
         run: |
           pnpm install --frozen-lockfile
           pnpm run build-storybook
 
+      # Step 5 — Deploy to GitHub Pages
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
         with:
-          branch: gh-pages # The branch the action should deploy to.
-          folder: docs # The folder the action should deploy.
+          branch: gh-pages
+          folder: docs
+          clean: true
