--- a/.github/workflows/build-storybook-demo.yml
+++ b/.github/workflows/build-storybook-demo.yml
@@ -18,7 +18,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 24
-          cache: 'pnpm'
+          cache: 'npm'
+          check-latest: false
 
       # Step 2 — Disable Corepack (MUST DO on Node 24)
       - name: Disable Corepack
